--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@ doc/jsdoc
 .project
 dist
 builds/
-configs/marusa_combined.yaml
 
 #####=== Node ===#####
 
@@ -63,3 +62,6 @@ Temporary Items
 
 #Results
 results/
+
+# Config files
+configs/marusa_combined.yaml
